clusters/ k8s-demo-with-pjh/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    # If the class annotation is not specified it defaults to "gce".
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: jibaek-woodoku-app-service
            port:
              number: 80
      - path: /gh-action-demo
        pathType: ImplementationSpecific
        backend:
          service:
            name: jibaek-gh-action-demo-app-service
            port:
              number: 80
      - path: /argocd
        pathType: ImplementationSpecific
        backend:
          service:
            name: jibaek-argocd-server
            port:
              number: 80
      - path: /jenkins
        pathType: ImplementationSpecific
        backend:
          service:
            name: jenkins
            port:
              number: 80
